History of Products.minaraad
============================

2.1.6 (unreleased)
------------------

- Added minaraad_service to the control panel.  [maurits]

- Added some sample code from a zopectl debug session for returning a
  list of members that have (recently) been modified.  Minaraad may
  want that so I will include it here.  See
  browser/service.py:modified_members
  [maurits]

- Removed directory sync and file BeautifulSoup.py as they were only
  for the import of users, which was handled a few years ago.
  [maurits]


2.1.5 (8 July 2008)
-------------------

- You can apparently come on the subscriptions form sometimes without
  being logged in.  Do not show the form in that case but show a link
  to the login form.
  [maurits]


2.1.4 (8 July 2008)
-------------------

- Final change to text after all duplicates have been removed.
  [maurits]


2.1.3 (8 July 2008)
-------------------

- After resetting the password, also redirect to the duplicate email
  form if needed.
  [maurits]


2.1.2 (8 July 2008)
-------------------

- Changed wording in some places.
  [maurits]


2.1.1 (4 July 2008)
-------------------

- Changed wording of email template to confirm membership.
  [maurits]

- Do not show author in recently_modified and only show the date
  there, not the time.
  [maurits]


2.1 (4 July 2008)
-----------------

- Show the subscriptions for each member on the duplicates page.
  Needs prettifying.
  [maurits]

- Added method getSubscriptionsForMemberId to the SubscriptionManager.
  [maurits]

- Display the duplicate members next to each other.
  [maurits]

- When a user logs in and there is more than one user with the same
  email address, we redirect to a form where he can compare those
  users and select one for deletion.
  [maurits]

- Added CMFPlone/skins/plone_login/login_next.cpy* for customizing.
  [maurits]

- Gave Managers the possibility to list all email addresses that are
  registered for more than one member; see @@minaraad_service.