@@ -34,6 +34,24 @@
       </dl>
     </tal:double_emails>
 
+    <tal:changed_members
+        condition="view/changed_members">
+      <h2>Deze gebruikers hebben recentelijk gegevens gewijzigd.</h2>
+      <table>
+        <tr>
+          <th>Wijzigingsdatum</th>
+          <th>Naam gebruiker</th>
+        </tr>
+        <tr tal:repeat="item view/changed_members">
+          <td tal:content="item/modified" />
+          <td>
+            <a tal:attributes="href item/url"
+               tal:content="item/fullname" />
+          </td>
+        </tr>        
+      </table>
+    </tal:changed_members>
+
     <form action=""
           name="search"
           method="post"
@@ -52,6 +70,14 @@
                type="submit"
                name="form.button.FindDoubleEmails"
                value="Vind emailadressen met meerdere gebruikers"
+               tal:attributes="tabindex tabindex/next;" />
+      </div>
+
+      <div class="formControls">
+        <input class="context"
+               type="submit"
+               name="form.button.ShowChangedMembers"
+               value="Toon gebruikers met recente wijzigingen"
                tal:attributes="tabindex tabindex/next;" />
       </div>    
     </form>
